# linux-benchmark-lib

./: .dockerignore  .flake8  .gitignore  .gitmodules  AGENTS.md  ANALYSIS.md  ARCHITECTURE_PLAN.md  CLAUDE.md  CLI.md  CODE_REVIEW.md  Dockerfile  Dockerfile_old  GEMINI.md  GUI_PLAN.md  ISSUES_PLAN.md  QWEN.md  README.md  benchmark_config.dfaas_multipass.json  benchmark_config.peva_faas_multipass.json  benchmark_config.py  cli.py  controller.py  data_handler.py  demo_ui.py  example.py  implementation_summary.md  importlinter.ini  local_runner.py  mkdocs.yml  orchestrator.py  pyproject.toml  release_notes_0.21.0.md  reporter.py  reproduce_issue.py  run_tests.sh  run_tests_mac.sh
ansible/: ansible.cfg
arch_issues/: 001-delete-dfaas-legacy-materials.md  001-stage0-safety-net.md  002-fix-dfaas-import-cycle.md  002-stage1-break-cycle-lb-app.md  003-consolidate-plugin-duplication.md  003-stage1-deduplicate-controller.md  004-split-benchmark-controller.md  004-stage2-split-run-service.md  005-reduce-complexity-hotspots.md  005-stage2-refactor-local-runner.md  006-fix-ruff-linting-errors.md  007-fix-security-vulnerabilities.md
arch_report/: architecture_review.md  architecture_review_2026.md  bandit.txt  deptry.txt  duplication_candidates.txt  grimp_cycles.txt  hotspots.txt  lizard.txt  mypy.txt  paths.txt  pip_audit.txt  pydeps.txt  pytest_cov.txt  radon_cc.txt  radon_mi.txt  ruff_check.txt  ruff_stats.txt  semgrep_auto.txt  tree_dirs.txt  tree_files.txt  vulture.txt  xenon.txt
data_exports/: dd_aggregated.csv  fio_aggregated.csv  stress_ng_aggregated.csv
docs/: ASSET_DECOUPLING_PLAN.md  PLUGIN_DEVELOPMENT.md  RESILIENCE_PLAN.md  api.md  cli.md  configuration.md  contributing.md  ctrl_c_design.md  ctrl_c_stop_flow.md  design_guidelines.md  dfaas-event-streaming-investigation.md  dfaas-event-streaming-status.md  diagrams.md  index.md  installation.md  interrupts.md  loki_grafana_requirements.md  mkdocs_hooks.py  phoronix_test_suite_integration_plan.md  plugins.md  quickstart.md  remote_execution.md
issue_drafts/: 001-dfaas-config-schema.md  002-dfaas-generator-k6-orchestration.md  003-dfaas-ansible-target-setup.md  004-dfaas-ansible-k6-host.md  005-dfaas-prometheus-queries.md  006-dfaas-docs-runbook.md  007-streaming-async-localrunner.md  008-polling-eventi-stream.md  009-stop-async-teardown.md  010-test-streaming-long-run.md  011-platform-run-config-split.md
issue_drafts_en/: 000-dfaas-epic.md  001-dfaas-config-schema.md  002-dfaas-generator-k6-orchestration.md  003-dfaas-target-setup-k3s-openfaas-prometheus.md  004-dfaas-k6-host-setup.md  005-dfaas-prometheus-queries.md  006-dfaas-docs-runbook.md  010-dfaas-refactoring-epic.md  011-dfaas-fix-failing-tests.md  012-dfaas-complete-readme.md  013-dfaas-extract-k6-runner.md  014-dfaas-extract-cooldown-manager.md  015-dfaas-extract-metrics-collector.md  016-dfaas-decompose-run-command.md  017-dfaas-improve-error-handling.md  018-dfaas-fix-polling-limit.md  019-dfaas-configurable-ports.md  020-dfaas-reduce-env-coupling.md  021-dfaas-improve-e2e-resilience.md
issues/: ISSUE-001-localrunner-test-fragmentation.md  ISSUE-002-plugin-tests-misplacement.md  ISSUE-003-controller-tests-in-common.md  ISSUE-004-missing-component-tests.md  ISSUE-005-common-folder-cleanup.md  ISSUE-006-test-markers-standardization.md  cli-01-cli-cleanup.md  tui-01-consolidate-viewmodels.md  tui-02-dashboard-viewmodel.md  tui-03-unify-picker-stack.md  tui-04-capabilities-and-tty.md  tui-05-protocols-cleanup.md  tui-06-theme-centralization.md  tui-07-dashboard-adapter-simplify.md  ui-08-extract-viewmodels.md
lb_analytics/: __init__.py  analytics_service.py  api.py
lb_app/: __init__.py  api.py  client.py  interfaces.py  ui_interfaces.py
lb_common/: __init__.py  api.py  entrypoints.py  errors.py  log_schema.py  logging.py  plugin_assets.py
lb_controller/: __init__.py  ansible_executor.py  api.py  async_api.py  cli.py  contracts.py  controller.py  controller_playbooks.py  controller_runner.py  controller_state.py  controller_stop.py  data_handler.py  interrupts.py  journal.py  journal_sync.py  lifecycle.py  paths.py  pending.py  stop_coordinator.py  types.py  ui_interfaces.py
lb_core/: __init__.py  benchmark_config.py
lb_gui/: .gitignore  README.md  __init__.py  app.py  main.py
lb_plugins/: __init__.py  api.py  base_generator.py  builtin.py  discovery.py  installer.py  interface.py  observability.py  plugin_assets.py  registry.py  settings.py  table.py  user_plugins.py
lb_provisioner/: __init__.py  api.py  docker.py  multipass.py  remote.py  service.py  types.py  utils.py
lb_runner/: __init__.py  api.py  benchmark_config.py  cli.py  data_handler_bridge.py  events.py  interfaces.py  local_runner.py  log_handler.py  noop_ui.py  output_helpers.py  registry.py  run_execution.py  run_planning.py  run_progress.py  run_results.py  stop_token.py  system_info.py  system_info_cli.py  system_info_io.py  system_info_service.py
lb_ui/: __init__.py  api.py  cli.py  dependencies.py  design_note.md
linux_benchmark_lib/: __init__.py  benchmark_config.py  cli.py  controller.py  data_handler.py  events.py  journal.py  local_runner.py
metric_collectors/: __init__.py  _base_collector.py  cli_collector.py  ebpf_collector.py  psutil_collector.py
plugins/: __init__.py  builtin.py  interface.py  registry.py
prompts/: dfaas-missing-events.md  dfaas_e2e_multipass.md  evaluate_tests.md  github_pages_docs_plan.md  lb_analytics.md  refactor_ui.md  review_arch.md  review_module.md  review_package.md  review_picker.md  review_tests.md  review_tui.md
scripts/: README.md  arch_audit.sh  arch_smells.py  check_api_imports.py  component_import_graph.py  gen_release_notes.py  graph_dependencies.py  install_loki.sh  mypy_all.sh  mypy_core.sh  mypy_plugins.sh  release_flow.sh  remove_worktree_with_submodules.sh  run_cognitive_complexity.sh  run_stage1_tests.sh  run_tests_with_cov.sh  run_vulture.sh  setup_dfaas_multipass.sh  setup_peva_faas_multipass.sh  switch_mode.sh  sync_external_plugins.sh  uninstall_loki.sh
services/: __init__.py  config_service.py  doctor_service.py  (+4 more)
(+1127 files in other folders)
